fixed some spacing issues in css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -328,6 +328,9 @@ footer p {
 	.answer-item {
 		font-size: .6rem;
 	}
+	.pic-row {
+		margin-top: 2rem!important;
+	}
 	#right-wrong p {
 		font-size: .8rem;
 	}
